# 22202-ANZHIN-OOP-CPP

task-0/: CMakeLists.txt  FileReader.h  FileReaderTest.cc  FileWriter.cc  FileWriter.h  Parser.cpp  Parser.h  ParserTest.cc  Statistics.cpp  Statistics.h  StatisticsTest.cc  main.cpp
task-1/: BitArray.cpp  BitArray.h  BitArrayTest.cc  CMakeLists.txt
task-2/: CMakeLists.txt
task-2/code/: BitArray.cpp  BitArray.h  Command.cpp  Command.h  CommandArgumentService.cpp  CommandArgumentService.h  FileReader.cpp  FileReader.h  GameController.cpp  GameController.h  Life.cpp  Life.h  LifeSettings.h  UserInterface.cpp  UserInterface.h  main.cpp
task-2/code/commands/: Command.cpp  Command.h  CommandFactory.h  DumpCommand.h  ExitCommand.h  HelpCommand.h  LiveCommand.h  TickCommand.h
task-2/code/tests/: CmdArgumentServiceTest.cc  FabricTest.cc  FileReaderTest.cc  LifeTest.cc
task-2/presets/: 1.life  2.life  3.life  4.life  5.life
task-3/: CMakeLists.txt
task-3/code/: ConfigsReader.cpp  ConfigsReader.h  Exceptions.h  Instruction.cpp  Instruction.h  SampleFlow.h  WAVBase.h  WAVReader.cpp  WAVReader.h  WAVWriter.cpp  WAVWriter.h  main.cpp
task-3/code/converters/: Converter.cpp  Converter.h  ConverterFactory.h  Mixer.cpp  Mixer.h  Muter.cpp  Muter.h  Replacer.cpp  Replacer.h
task-3/tests/: ConfigReaderTest.cc
task-4/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  Exceptions.h  main.cpp  tests.cc
